--- a/index.html
+++ b/index.html
@@ -146,12 +146,13 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://backendbob.com/stanford/bitstarter3.jpg">
+          <img class="img-polaroid" alt="screenshot" src="http://backendbob.com/stanford/bitstarter3.jpg">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
-          <div class="span8 offset2">
+        <div class="row-fluid"> 
+	 <div class="span8 offset2">
             <div class="statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
@@ -173,6 +174,7 @@
               </div>
             </div>
           </div>
+	 <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
@@ -181,11 +183,15 @@
               <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+	  </div>
+	 <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+	 </div>
+	 <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
@@ -194,14 +200,15 @@
           </div>
         </div>
       </div>
-
+      </div>
+     </div>
       <!-- Beyond this part the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://backendbob.com/stanford/bitstarter2.jpg">
+          <img class="img-polaroid" alt="screenshot" src="http://backendbob.com/stanford/bitstarter2.jpg">
         </div>
         <div class="span5 copy">
           <p>
@@ -217,7 +224,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://backendbob.com/stanford/bitstarter1.jpg">
+          <img class="img-polaroid" alt="screenshot" src="http://backendbob.com/stanford/bitstarter1.jpg">
         </div>
       </div>
 
